# Nucleus

./: CMakeLists.txt  Nuclear_cpp_project.sln  Nuclear_cpp_project.vcxproj  Nuclear_cpp_project.vcxproj.filters  README.md  main.cpp  mathematics.cpp  mathematics.h  matrix.cpp  matrix.h  potentials.h  util.cpp  util.h
Nucleus/: Single_Particle_SE.cpp
Output/: V_C  V_WS  V_WS+V_C  n_wf_p1_2_1.txt  n_wf_p3_2_1.txt  n_wf_s1_2_1.txt  p_NormRwf_s1_2_1.txt  p_Rwf_s1_2_1.txt  p_norm_test.txt  p_wf_p1_2_1.txt  p_wf_p3_2_1.txt  p_wf_s1_2_1.txt
math/: CMakeLists.txt
math/include/: matrix.h  numerics.h  util.h
math/source/: matrix.cpp  numerics.cpp  util.cpp
nucleus/: CMakeLists.txt
nucleus/include/: PhysConstants.h
nucleus/include/observables/: BE.h
nucleus/include/shells/: hamil.h  mfSolver.h  potentials.h
nucleus/source/: PhysConstants.h  main.cpp
nucleus/source/observables/: BE.cpp
nucleus/source/shells/: hamil.cpp  hamil.h  mfSolver.cpp  mfSolver.h  potentials.cpp  potentials.h
plot_data/: HO.txt  WS.txt  WSderivative.txt  x_d2f.txt
